2021-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>
	* device/lib/gbz80/__initrleblock.s,
	  device/lib/gbz80/crt0.s,
	  device/lib/gbz80/div.s,
	  device/lib/gbz80/memcpy.s,
	  device/lib/gbz80/mul.s,
	  device/lib/gbz80/setjmp.s:
	  Do some obvious asm improvements for gbz80's stdlib.

2021-03-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Improve handling of iy.

2021-03-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Improve handling of iy.
	* device/include/string.h,
	  device/lib/memset_explicit.c,
	  device/lib/incl.mk:
	  C23 memset_explicit.

2021-03-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Fix an issue affecting cost estimation for some register-to-register loads.

2021-03-09 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph-gbz80.def,
	  src/z80/peeph.def:
	  Add new peephole rules. (Based on generated code from stdlib)

2021-03-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a gbz80 parameter push bug.
	* support/regression/tests/rotate2.c:
	  Disable test for mcs51 (bug #3188).

2021-03-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/peeph.def_
	  Improve use of iy.

2021-03-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Optimize last byte of negation, part of RFE #734.

2021-03-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3187.

2021-03-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Pick notUsedFrom improvement and optimizeFor from patch #62 by Visenri.
	* src/z80/peeph.def:
	  Small z80 peephole rule cleanup.
	* src/z80/gen.c:
	  Improve gbz80 comparison with 0, part of RFE #734.

2021-03-08 Philipp Klaus Krause <pkk AT spth.de>

	* Merge sdcc-next branch to trunk.

2021-03-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* .version: post release bump to 4.1.1
