@@ -32,26 +32,30 @@
 	.globl ___setjmp
 
 ___setjmp:
-	pop	bc
-	pop	de
-	push	de
-	push	bc
-
-	; Store stack pointer.
 	ldhl	sp, #0
-	push	de
-	push	hl
-	pop	de
-	pop	hl
-	ld	a, e
-	ld	(hl+), a
-	ld	a, d
-	ld	(hl+), a
+	; Load sp into de.
+	ld	e, l
+	ld	d, h
+	; Load return address into bc.
+	ld	a, (hl+)
+	ld	c, a
+	ld	a, (hl+)
+	ld	b, a
+	; Load env into hl.
+	ld	a, (hl+)
+	ld	h, (hl)
+	ld	l, a
 
 	; Store return address.
 	ld	a, c
 	ld	(hl+), a
-	ld	(hl), b
+	ld	a, b
+	ld	(hl+), a
+
+	; Store stack pointer.
+	ld	a, e
+	ld	(hl+), a
+	ld	(hl), d
 
 	; Return 0.
 	ld	de, #0
@@ -60,9 +64,10 @@ ___setjmp:
 .globl _longjmp
 
 _longjmp:
+	; We'll never jump back, we can lose this
 	pop	af
-	pop	hl
-	pop	de
+	pop	hl ; env
+	pop	de ; return value
 
 	; Ensure that return value is non-zero.
 	ld	a, e
@@ -71,32 +76,25 @@ _longjmp:
 	inc	de
 0001$:
 
-	; Get stack pointer.
+	; Get return address.
 	ld	a, (hl+)
 	ld	c, a
 	ld	a, (hl+)
 	ld	b, a
+	; Get stack pointer.
+	ld	a, (hl+)
+	ld	h, (hl)
+	ld	l, a
 
 	; Adjust stack pointer.
-	push	hl
-	push	bc
-	pop	hl
-	pop	bc
 	ld	sp, hl
-	push	bc
-	pop	hl
-
-	; Get return address.
-	ld	a, (hl+)
-	ld	c, a
-	ld	b, (hl)
 
 	; Set return address.
+	ld	l, c
+	ld	h, b
 	pop	af
-	push	bc
 
 	; Return value is in de.
 
 	; Jump.
-	ret
-
+	jp	(hl)
