@@ -1,4 +1,8 @@
 2021-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>
+	* device/lib/gbz80/setjmp.s:
+	  Rewrite setjmp for gbz80.
+
+2021-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>
 	* device/lib/gbz80/__initrleblock.s,
 	  device/lib/gbz80/crt0.s,
 	  device/lib/gbz80/div.s,
